add save the date

--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
         <div class="date-decoration">
           <div class="floating-heart">💕</div>
           <div class="floating-heart">💒</div>
-          <div class="floating-heart">💕</div>
+          <div class="floating-heart">💍</div>
         </div>
       </div>
 
@@ -1024,7 +1024,7 @@
             </div>
             <div class="detail-item">
               <i class="fas fa-clock"></i>
-              <span>Wedding Ceremony</span>
+              <span><b>9:00 AM</b> - Wedding Ceremony</span>
             </div>
             <div class="detail-item">
               <i class="fas fa-heart"></i>
@@ -1067,7 +1067,7 @@
             </div>
             <div class="detail-item">
               <i class="fas fa-utensils"></i>
-              <span>Lunch & Dancing</span>
+              <span><b>1:00 PM</b> - Lunch & Dancing</span>
             </div>
             <div class="detail-item">
               <i class="fas fa-heart"></i>
